fix: changed styles to prevent content jumping

--- a/src/app/components/navbar/navbar.scss
+++ b/src/app/components/navbar/navbar.scss
@@ -7,6 +7,9 @@
 
 .nav {
   background-color: $black;
+  position: unset;
+  width: 100%;
+  z-index: 1;
 
   &-link {
     color: $grey;
@@ -27,6 +30,8 @@
 }
 
 .nav-scrolled {
+  position: fixed;
+  top: 0;
   border-bottom: 1px solid #202020;
   background-color: rgba(13, 17, 23, 0.9);
   backdrop-filter: blur(5px);
